<resources>
    <string name="app_name">BeatTrack</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="password">Password</string>
    <string name="at_least_8_characters">at least 8 characters</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="make_sure_at_least_8_characters">make sure at least 8 characters</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="join_the_community">join the community</string>
    <string name="if_you_already_have_an_account">if you already have an account</string>
    <string name="login">Login</string>
</resources>